can now retreive reports based on each user role
